--- a/css/index.css
+++ b/css/index.css
@@ -110,27 +110,29 @@ nav li:hover {
     border-bottom: 2px solid white;
 }
 
+/*
 .rotateleft {
-    -webkit-transform: rotate(-5deg); /* Safari */
-    transform: rotate(-5deg); /* Standard syntax */
-    overflow: visible;
+    -webkit-transform: rotate(-5deg);
+    transform: rotate(-5deg);
 }
 
 .rotateright {
-    -webkit-transform: rotate(5deg); /* Safari */
-    transform: rotate(5deg); /* Standard syntax */
+    -webkit-transform: rotate(5deg);
+    transform: rotate(5deg);
 }
+*/
 
 .centre {
     width: 100%;
     max-width: 1280px;
+    max-height: 700px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%, -50%);
-    max-height: 700px;
 }
+/*
 
 .textblock {
     font-family: sans-serif;
@@ -151,7 +153,7 @@ nav li:hover {
 
 .textblock a:hover {
     text-decoration: underline;
-    /*! text-shadow: 0 0 5px white; */
+    text-shadow: 0 0 5px white; 
     color: #513710;
 }
 
@@ -159,6 +161,7 @@ nav li:hover {
     color: white;
     text-shadow: 0 0 5px black;
 }
+*/
 
 .postcard {
     /*http://www.bittbox.com/freebies/freebie-friday-6-vintage-paper-photoshop-patterns*/
