--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,30 @@
-
+body {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 62.5%;
+    background-image: url(../img/paper1.jpg);
+}
 
 header {
     width: 100%;
     height: 100vh;
     text-align: center;
-    background-image: url(../img/stamp.png), url(../img/BB_SeamlessPaper_03.jpg);
-    background-position: center, top left;
-    background-repeat: no-repeat, repeat;
-    background-size: 70vh, 150px;
+    background: white url(../img/paper2.jpg) repeat left top;
+    background-size: 150px;
+    color: white;
+    font-size: 3em;
+    font-family: sans-serif;
+    font-weight: 100;
+    min-height: 500px;
+    position: relative;
+}
+
+#logo {
+    height: 70vh;
+    left: 0;
+    margin: 15vh auto;
+    padding: 0;
 }
 
 ul.nav {
@@ -45,26 +62,127 @@ ul.nav {
     color: white;
 }
 
-header {
-    text-align: center;
-    color: white;
-    font-size: 3em;
-    font-family: sans-serif;
-    font-weight: 100;
-}
-
 header h1 {
     letter-spacing: 0.2em;
 }
 
-
-body {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 62.5%;
-}
-
 #foottop {
     padding-top: 5px;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    font-size: 0.8em;
+}
+
+main {
+    max-width: 1650px;
+    margin: 0 auto;
+}
+
+.postcard {
+    background-image: url(../img/dirtvint.png), url(../img/paper2.jpg);
+    background-repeat: repeat, repeat;
+    border-radius: 2px;
+    border-width: 38px;
+    -o-border-image: url(../img/postcardBorder.png) 38 round;
+    border-image: url(../img/postcardBorder.png) 38 round;
+    letter-spacing: 0.1em;
+    box-shadow: 10px 10px 50px 5px rgba(0, 0, 0, 0.5);
+    width: 900px;
+    min-height: 550px;
+    margin: 120px 50px 0 50px;
+    position: relative;
+    color: #444;
+    font-family: cursive;
+}
+
+@media only screen and (max-width: 1100px){
+    .postcard {
+        margin: 120px 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 1000px){
+    .postcard {
+        width: 90%;
+        font-size: 0.7em;
+        min-height: 400px;
+    }
+}
+
+.rotateleft {
+    transform: rotate(-5deg);
+    float: left;
+    clear: both;
+}
+
+.rotateright {
+    transform: rotate(5deg);
+    float: right;
+}
+
+.pparavion {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.pparadise {
+    position: absolute;
+    top: 10px;
+    right: 200px;
+}
+
+.pwavyline {
+    position: absolute;
+    top: 40px;
+    right: 0;
+    width: 400px;
+    height: 100px;
+}
+
+.plogo {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 210px;
+    width: 210px;
+    transform: rotate(-20deg);
+}
+
+.postcardright {
+    float: right;
+    width: 45%;
+    margin-top: 20%;
+}
+
+.postcardright p {
+    padding: 30px 20px 0 20px;
+    margin: 0 50px 0 20px;
+    border-bottom: 1px solid black;
+    font-size: 3.5em;
+}
+
+.postcardleft {
+    float: left;
+    width: 55%;
+    padding-left: 20px;
+    box-sizing: border-box;
+}
+
+.postcardleft h1 {
+    font-size: 4em;
+    margin: 0;
+}
+
+.postcardleft p {
+    font-size: 3em;
+    line-height: 1.6em;
+    margin: 0;
+    padding-right: 20px;
+    border-right: 1px solid black;
+}
+
+#committee {
+    clear: both;
 }
