--- a/css/style.css
+++ b/css/style.css
@@ -79,21 +79,42 @@ main {
     margin: 0 auto;
 }
 
-.postcard {
-    background-image: url(../img/dirtvint.png), url(../img/paper2.jpg);
-    background-repeat: repeat, repeat;
-    border-radius: 2px;
-    border-width: 38px;
-    -o-border-image: url(../img/postcardBorder.png) 38 round;
-    border-image: url(../img/postcardBorder.png) 38 round;
+.infocard {
     letter-spacing: 0.1em;
-    box-shadow: 10px 10px 50px 5px rgba(0, 0, 0, 0.5);
     width: 900px;
     min-height: 550px;
     margin: 120px 50px 0 50px;
     position: relative;
     color: #444;
     font-family: cursive;
+    border-width: 38px;
+}
+
+.infocard a {
+    display: block;
+    color: white;
+    font-size: 2.5em;
+    border: 1px solid black;
+    text-align: center;
+    margin: 30px 20px;
+    padding: 10px 0;
+    transition: all 0.3s ease-in-out;
+    border-radius: 3px;
+}
+
+.infocard a:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 5px white;
+    box-shadow: 0 0 15px white;
+}
+
+.postcard {
+    background-image: url(../img/dirtvint.png), url(../img/paper2.jpg);
+    background-repeat: repeat, repeat;
+    border-radius: 2px;
+    -o-border-image: url(../img/postcardBorder.png) 38 round;
+    border-image: url(../img/postcardBorder.png) 38 round;
+    box-shadow: 10px 10px 50px 5px rgba(0, 0, 0, 0.5);
 }
 
 @media only screen and (max-width: 1100px){
@@ -106,6 +127,9 @@ main {
     .postcard {
         width: 90%;
         font-size: 0.7em;
+    }
+    
+    .infocard {
         min-height: 400px;
     }
 }
@@ -113,12 +137,19 @@ main {
 .rotateleft {
     transform: rotate(-5deg);
     float: left;
-    clear: both;
+}
+
+.smallrotateleft {
+    transform: rotate(-4deg);
 }
 
 .rotateright {
     transform: rotate(5deg);
     float: right;
+}
+
+.smallrotateright {
+    transform: rotate(4deg);
 }
 
 .pparavion {
@@ -156,6 +187,28 @@ main {
     margin-top: 20%;
 }
 
+@media only screen and (max-width: 1000px){
+    .pparavion {
+        height: 120px;
+    }
+    .pparadise {
+        height: 120px;
+        right: 150px;
+    }
+    .pwavyline {
+        width: 350px;
+        height: 80px;
+    }
+    .plogo {
+        height: 150px;
+        width: 150px;
+        transform: rotate(-20deg);
+    }
+    .postcardright {
+        margin-top: 15%;
+    }
+}
+
 .postcardright p {
     padding: 30px 20px 0 20px;
     margin: 0 50px 0 20px;
@@ -185,4 +238,42 @@ main {
 
 #committee {
     clear: both;
+    padding-top: 160px;
+    width: 100%;
+    text-align: center;
+    font-family: cursive;
+}
+
+#committeetitle {
+    font-size: 5em;
+}
+
+.deet {
+    background-image: url(../img/paper2.jpg);
+    display: inline-block;
+    width: 300px;
+    margin: 20px;
+    font-size: 1.5em;
+    border-width: 15px;
+}
+
+.deet h3, .deet h2, #committee h1 {
+    margin: 0;
+    font-weight: 100;
+}
+
+.deet a {
+    font-weight: 100;
+    text-decoration: none;
+    font-family: sans-serif;
+    color: #06D;
+}
+
+.deet a:hover {
+    text-decoration: underline;
+    text-shadow: 0 0 5px white;
+}
+
+#bottombuffer {
+    height: 100px;
 }
