--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,15 @@ body {
     padding: 0;
     border: 0;
     font-size: 62.5%;
-    background-image: url(../img/paper1.jpg);
+}
+
+#backing {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: red;
 }
 
 header {
@@ -258,6 +266,7 @@ main {
     width: 100%;
     text-align: center;
     font-family: cursive;
+    position: relative;
 }
 
 #committeetitle {
@@ -270,7 +279,7 @@ main {
     display: inline-block;
     width: 300px;
     margin: 20px;
-    font-size: 1.5em;
+    font-size: 1.8em;
     border-width: 15px;
 }
 
