--- a/onthenight.css
+++ b/onthenight.css
@@ -10,11 +10,18 @@ body {
 }
 
 header {
-  position: fixed;
-  width: 100%;
   font-size: 1.4em;
   font-weight: 300;
-  padding-top: 5px;
+  
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.1s ease-in-out;
+  -webkit-transform-origin: 0 100%;
 }
 
 header div {
@@ -26,13 +33,13 @@ header div {
   box-sizing: border-box;
   text-align: center;
   border-radius: 3px;
-  border: 1px solid rgba(255,255,255,0.7);
+  border: 1px solid rgba(255, 255, 255, 0.7);
   background: rgba(27, 32, 40, 0.8);
   transition: all 0.2s ease-in-out;
 }
 
 header div:hover {
-  background: rgba(255,255,255,0.7);
+  background: rgba(255, 255, 255, 0.7);
   color: black;
 }
 
@@ -47,12 +54,9 @@ header div:hover {
 }
 
 main {
-  padding-top: 100px;
+  padding-bottom: 100px;
 }
-
 
 main img {
   width: 100%;
-/*  overflow: scroll;*/
-/*  transition: all 0.2s ease-in-out;*/
 }
